change fname and lname to name only
